2002-10-25  Gary Thomas  <gthomas@ecoscentric.com> (inspired by)
2002-10-25  Gordon Schumacher <gordon_schumacher@maxtor.com>

	* include/hal_sa11x0.h: Add SRAM definitions.

2002-08-12  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm_sa11x0.cdl: Remove CYGSEM_REDBOOT_ARM_LINUX_BOOT
	requirement.

2002-05-18  Gary Thomas  <gthomas@redhat.com>

	* src/hal_diag.c (cyg_hal_plf_serial_control): Fix return value
	when changing the baud rate.

2002-05-01  Gary Thomas  <gthomas@redhat.com>

	* tests/mmap_test.c: Diagnostic prints for failure cases.

2002-04-24  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_arm_sa11x0.cdl: CYGPRI_KERNEL_TESTS_DHRYSTONE_PASSES added.

2002-01-29  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_arm_sa11x0.cdl: Removed CRUFT_H.

	* include/hal_sa11x0.h: Moved CYGARC_PHYSICAL_ADDRESS definition
	to:
	* include/var_io.h: this file.

2002-01-28  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_arm_sa11x0.cdl: Declare var_io.h file.
	Tug RedBoot requirements away in a component properly controlled
	by the RedBoot presence.
	* include/var_io.h: Added.

2002-01-25  Jesper Skov  <jskov@redhat.com>

	* include/hal_sa11x0.h (CYGARC_PHYSICAL_ADDRESS): Added.

	* src/redboot_linux_exec.c: Moved to arch directory.
	* cdl/hal_arm_sa11x0.cdl: Replaced options with requirements to
	arch options.

2002-01-25  David Woodhouse  <dwmw2@cambridge.redhat.com>

	* src/redboot_linux_exec.c (do_exec): Trick the compiler into
	thinking that the end1 and lab1 labels are both actually used,
	so it doesn't move them around.
	
2002-01-22  David Woodhouse  <dwmw2@cambridge.redhat.com>

	* src/redboot_linux_exec.c (do_exec): Pass ATAG_MEM to Linux
	kernel, having tried to obtain the appropriate numbers from the
	MLT header file. This could probably do with some improvement -
	the actual information we need isn't necessarily present in the
	required form.

2002-01-14  David Woodhouse  <dwmw2@cambridge.redhat.com>

	* src/redboot_linux_exec.c (do_exec): Use load start/end